--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,13 @@
 <div class="container">
-    <h1>{{ title }} app is running!</h1>
-    <input type="text" [(ngModel)]="title">
-    <p class="alert alert-warning alert-dismissible fade show">{{ name }}</p>
-    <h3>Im in the app component</h3>
+    <div class="row">
+        <h1>{{ title }} app is running!</h1>
+        <input type="text" [(ngModel)]="title">
+        <p class="alert alert-warning alert-dismissible fade show">{{ name }}</p>
+        <h3>Im in the app component</h3>
+    </div>
+
+    <div class="row">
+        <hr>
+        <app-servers></app-servers>
+    </div>
 </div>
-<hr>
-<app-servers></app-servers>
