--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
         <h1>{{ title }} app is running!</h1>
         <input type="text" [(ngModel)]="title">
         <p class="alert alert-warning alert-dismissible fade show">{{ name }}</p>
-        <h3>Im in the app component</h3>
+        <h3>Im in the app.component</h3>
     </div>
 
     <div class="row">
