--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,3 +1,4 @@
 <p>the (nested) servers' components</p>
 <app-server></app-server>
 <app-server></app-server>
+<button class="btn btn-primary" [disabled]="!allowNewServer" [innerText]="allowNewServer">Add server</button>
