--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,4 +1,10 @@
 <p>the (nested) servers' components</p>
 <app-server></app-server>
 <app-server></app-server>
-<button class="btn btn-primary" [disabled]="!allowNewServer" [innerText]="allowNewServer">Add server</button>
+<hr>
+<label>Server name</label>
+<input type="text" class="form-control" (input)="updateServerName($event)">
+<button class="btn btn-primary" (click)="createServer()" [disabled]="!allowNewServer" [innerText]="allowNewServer">Add
+    server</button>
+<p>{{serverCreationStatus}}</p>
+<p>Name of the server: {{serverName}}</p>
