--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -7,5 +7,6 @@
 <input type="text" class="form-control" [(ngModel)]="serverName">
 <button class="btn btn-primary" (click)="createServer()" [disabled]="!allowNewServer" [innerText]="allowNewServer">Add
     server</button>
-<p>{{serverCreationStatus}}</p>
+<!-- <p>{{serverCreationStatus}}</p> -->
 <!-- <p>Name of the server: {{serverName}}</p> -->
+<p *ngIf="serverCreation">Server was created, server name is {{serverName}}</p>
