--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -9,4 +9,7 @@
     server</button>
 <!-- <p>{{serverCreationStatus}}</p> -->
 <!-- <p>Name of the server: {{serverName}}</p> -->
-<p *ngIf="serverCreation">Server was created, server name is {{serverName}}</p>
+<p *ngIf="serverCreation; else noServer">Server was created, server name is {{serverName}}</p>
+<ng-template #noServer>
+    <p>No server was created.</p>
+</ng-template>
