--- a/src/server/server.component.html
+++ b/src/server/server.component.html
@@ -1,4 +1,5 @@
 <p>i am nested server</p>
 <p>Some "dynamic" data output: </p>
-<p>Server with name <b>{{getServerName()}}</b> and ID <b>{{ serverId }}</b> is <b>{{ serverStatus }}</b></p>
+<p [ngStyle]="{'background-color':getColor()}">Server with name <b>{{getServerName()}}</b> and ID <b>{{ serverId }}</b>
+    is <b>{{ serverStatus }}</b></p>
 <hr>
