--- a/src/server/server.component.html
+++ b/src/server/server.component.html
@@ -1,6 +1,7 @@
 <p>i am nested server</p>
-<p>Some "dynamic" data output: </p>
+<p>Some "dynamic" data output (data binding): </p>
 <p [ngStyle]="{'background-color':getColor()}" [ngClass]="{online:serverStatus === 'online'}">Server with name
     <b>{{getServerName()}}</b> and ID <b>{{ serverId }}</b>
-    is <b>{{ serverStatus }}</b></p>
+    is <b>{{ serverStatus }}</b>
+</p>
 <hr>
